Refactoring with query param